--- a/src/apps/1688Admin/webapp/README.pug
+++ b/src/apps/1688Admin/webapp/README.pug
@@ -709,6 +709,17 @@ block content
                         |1.1688Admin后台：OA 考勤管理页面修改增加开始时间和结束时间，去掉不必要的checkbox；岗位调整页面增加增删改查页面；系统管理-组织结构：增加设置部门负责人功能。
                         br
                         |2.门户网站1688Web，手机端页面引用的app.js改为app-m.js，剔除了手机端不必要的代码；新增资源服务、智慧园区、我的、登录注册相关页面。
+                    .p
+                        .num 12.09
+                        |1.1688Admin后台：OA增加消息推送OAMessage.js；添加跳转页redirect.html;
+                        br
+                        |2.门户网站1688Web：调整会议室申请时间选择控件，禁用当前之前的日期，时间滑块可动态设置禁用范围；我的页面添加多个标签页内容；增加跳转页面redirect.html; 
+                        |增加“建设中”提示页面wip.html;物业申请增加两个内容。
+                    .p
+                        .num 12.13
+                        |1.1688Admin后台：增加信息化平台数据大屏幕；系统首页右侧通知固定5行高度；oa个人任务表格增加“紧急任务”突出效果。
+                        br
+                        |2.门户网站1688Web：调整移动端首页轮播图片自适应尺寸；调整PC端页面宽度避免右侧快捷导航覆盖内容。
                     
 
                     
