--- a/src/apps/1688Admin/webapp/index.pug
+++ b/src/apps/1688Admin/webapp/index.pug
@@ -21,7 +21,8 @@ block content
                         |通知公告
                         .block-title-head-deco
                     a.block-title-shoulder(href="javascript:;") 更多
-                include ../components/news-list/index
+                .notice-fix-height
+                    include ../components/news-list/index
                 .block-title.no-bottom.type2.mt-space
                     .block-title-head 
                         |园区企业分布
@@ -139,4 +140,3 @@ block js
             });
             
         });
-
