--- a/src/apps/1688Admin/webapp/oa-purchase-examine-1.pug
+++ b/src/apps/1688Admin/webapp/oa-purchase-examine-1.pug
@@ -58,6 +58,13 @@ block content
                                     .icheck-text 经理意见
                                 textarea.form-control.textarea(rows='2')
                     .col-xs-12
+                        .cool-form-group.form-group-sm.cool-form-input-group
+                            .cool-form-content.icheck-label
+                                label
+                                    input.examine-radio(type='radio' name='radio' id='radio4' disabled)
+                                    .icheck-text  总经理意见
+                                //textarea.form-control.textarea(rows='2')
+                    .col-xs-12
                         .btn.btn-large.btn-theme#btn_ok
                             i.fa.fa-check
                             |&nbsp;同意
@@ -104,6 +111,3 @@ block js
 
 
             
-
-
-
