--- a/src/apps/1688Web/components/company-list/estate-clean.pug
+++ b/src/apps/1688Web/components/company-list/estate-clean.pug
@@ -1,3 +1,5 @@
 .company-filter
     .btn-company-filter.sel 保洁申请
     a.btn-company-filter(href="estate-repair.html") 一键报修
+    a.btn-company-filter(href="estate-delivery.html") 配送申请
+    a.btn-company-filter(href="estate-deco.html") 装修申请
