--- a/src/apps/1688Web/components/m-footnav/index-personal.pug
+++ b/src/apps/1688Web/components/m-footnav/index-personal.pug
@@ -6,10 +6,10 @@
                     i.iconfont.icon-shouye
                 .footbar-btn-text 首页
         .col-xs-4
-            .footbar-btn.touch-active
+            a.footbar-btn.touch-active(href="m-activity.html")
                 .footbar-btn-icon
                     i.iconfont.icon-yuanqu
-                .footbar-btn-text 园区
+                .footbar-btn-text 活动
         .col-xs-4
             .footbar-btn.touch-active.sel#btn_personal
                 .footbar-btn-icon
