--- a/src/apps/1688Web/components/m-slider/index.pug
+++ b/src/apps/1688Web/components/m-slider/index.pug
@@ -1,17 +1,27 @@
-.abs-container.abs-hp-2of5.first-margin
-    .abs-content.m-slider.owl-carousel.owl-theme#m_slider
+.first-margin
+    .m-slider.owl-carousel.owl-theme#m_slider
         a.item(href="m-article.html")
-            .item-bg
-                img(src = IMG_DIR + "slider_1.jpg")
+            .abs-container.abs-hp-2of5
+                .abs-content
+                    .item-bg
+                        img(src = IMG_DIR + "slider_1.jpg")
         a.item(href="m-article.html")
-            .item-bg
-                img(src = IMG_DIR + "slider_2.jpg")
+            .abs-container.abs-hp-2of5
+                .abs-content
+                    .item-bg
+                        img(src = IMG_DIR + "slider_2.jpg")
         a.item(href="m-article.html")
-            .item-bg
-                img(src = IMG_DIR + "slider_3.jpg")
+            .abs-container.abs-hp-2of5
+                .abs-content
+                    .item-bg
+                        img(src = IMG_DIR + "slider_3.jpg")
         a.item(href="m-article.html")
-            .item-bg
-                img(src = IMG_DIR + "slider_4.jpg")
+            .abs-container.abs-hp-2of5
+                .abs-content
+                    .item-bg
+                        img(src = IMG_DIR + "slider_4.jpg")
         a.item(href="m-article.html")
-            .item-bg
-                img(src = IMG_DIR + "slider_5.jpg")
+            .abs-container.abs-hp-2of5
+                .abs-content
+                    .item-bg
+                        img(src = IMG_DIR + "slider_5.jpg")
