--- a/src/apps/1688Web/components/m-slider/index.styl
+++ b/src/apps/1688Web/components/m-slider/index.styl
@@ -13,6 +13,17 @@
                 height auto
                 display block
                 flaot left
+        .abs-container
+            .abs-content
+                .item-bg
+                    position absolute
+                    left 0
+                    right 0
+                    bottom 0
+                    top 0
+                    img
+                        width 100%
+                        height 100%
     .owl-dots
         position absolute
         width 100%
