--- a/src/apps/1688Web/components/m-staff/index.styl
+++ b/src/apps/1688Web/components/m-staff/index.styl
@@ -36,3 +36,15 @@
             color WHITE
         &.sel
             cursor default
+    &.type2
+        text-align left
+        width auto
+        overflow auto
+        line-height 0
+        //white-space nowrap
+        .btn-content-switch
+            border 0.01rem solid THEME_COLOR
+            border-radius 0.04rem !important
+            margin-right 0.02rem
+            margin-bottom 0
+            margin-top 0.02rem
