--- a/src/apps/1688Web/components/m-staff/personal-message.pug
+++ b/src/apps/1688Web/components/m-staff/personal-message.pug
@@ -1,3 +1,8 @@
-.content-switch
+.content-switch.type2
     a.btn-content-switch(href="m-personal-notice.html") 我的通知
+    a.btn-content-switch(href="m-personal-sys.html") 系统消息
     .btn-content-switch.sel 我的留言
+    a.btn-content-switch(href="m-personal-my-fee.html") 我的缴费
+    a.btn-content-switch(href="m-personal-fee-notice.html") 收费通知
+    a.btn-content-switch(href="m-personal-estate.html") 物业申请
+    a.btn-content-switch(href="m-personal-conf.html") 会展申请
