--- a/src/apps/1688Web/components/user-info/index.styl
+++ b/src/apps/1688Web/components/user-info/index.styl
@@ -133,6 +133,7 @@ MESSAGE_AVATAR_SIZE = 0.64rem
     display block
     width 100%
     margin-bottom 0.2rem
+    overflow hidden
     .btn-message-filter
         border-radius 2*COMMON_BORDER_RADIUS
         border 0.02rem solid THEME_COLOR
