--- a/src/apps/1688Web/webapp/m-approval-meetingroom.pug
+++ b/src/apps/1688Web/webapp/m-approval-meetingroom.pug
@@ -45,28 +45,36 @@ block content
                                         .abs-container.abs-hp-1of2
                                             .abs-content
                                                 img.rcs-pic-img(src=IMG_DIR + 'rcs-item-01.jpg')
-                                        .rcs-pic-label D202
+                                        .rcs-pic-label 
+                                            .pull-left D202
+                                            .pull-right ¥100元/小时
                                 .room-item.col-xs-6.col-sm-3
                                     .rcs-pic-item
                                         input.rcs-radio(type="radio" name="room" value="D302")
                                         .abs-container.abs-hp-1of2
                                             .abs-content
                                                 img.rcs-pic-img(src=IMG_DIR + 'rcs-item-02.jpg')
-                                        .rcs-pic-label D302
+                                        .rcs-pic-label 
+                                            .pull-left D302
+                                            .pull-right ¥100元/小时
                                 .room-item.col-xs-6.col-sm-3
                                     .rcs-pic-item
                                         input.rcs-radio(type="radio" name="room" value="C201")
                                         .abs-container.abs-hp-1of2
                                             .abs-content
                                                 img.rcs-pic-img(src=IMG_DIR + 'rcs-item-03.jpg')
-                                        .rcs-pic-label C201
+                                        .rcs-pic-label 
+                                            .pull-left C201
+                                            .pull-right ¥100元/小时
                                 .room-item.col-xs-6.col-sm-3
                                     .rcs-pic-item
                                         input.rcs-radio(type="radio" name="room" value="F103")
                                         .abs-container.abs-hp-1of2
                                             .abs-content
                                                 img.rcs-pic-img(src=IMG_DIR + 'rcs-item-04.jpg')
-                                        .rcs-pic-label F103
+                                        .rcs-pic-label 
+                                            .pull-left F103
+                                            .pull-right ¥100元/小时
                             .col-xs-12
                                 .form-group.cool-form-group.form-group-sm
                                     .cool-form-label.text-right.control-label 会议日期：
