--- a/src/apps/1688Web/webapp/personal-notice.pug
+++ b/src/apps/1688Web/webapp/personal-notice.pug
@@ -26,12 +26,22 @@ block content
                             ul.nav.nav-tabs.tp-tab
                                 li
                                     a(href="personal-message.html") 我的留言
+                                li
+                                    a(href="personal-sys.html") 系统消息
                                 li.active
                                     a(href='personal-notice.html') 
                                         |我的通知
                                         span.num 2
+                                li
+                                    a(href="personal-my-fee.html") 我的缴费
+                                li
+                                    a(href="personal-fee-notice.html") 收费通知
+                                li
+                                    a(href="personal-estate.html") 物业申请
+                                li
+                                    a(href="personal-conf.html") 会展申请
                         .col-xs-10
-                            .tp-content.tab-pane#notice
+                            .tp-content
                                 .deco-box
                                 .tp-content-title
                                     |我的通知
