--- a/src/apps/1688Web/webapp/stylus/bs-overwrite.styl
+++ b/src/apps/1688Web/webapp/stylus/bs-overwrite.styl
@@ -72,6 +72,8 @@
             margin-right 0
             border-radius 0
             padding 0.06rem 0.12rem
+    @media MOBILE
+        font-size 0.08rem
 
 
 legend
@@ -79,11 +81,11 @@ legend
 
 $SCREEN_LG = 1400px
 $SCREEN_WD = 1200px
-$SCREEN_MD = 940px
+$SCREEN_MD = 1030px
 $SCREEN_SM = 768px
 
 $CONTAINER_LG = 1200px
-$CONTAINER_WD = 1060px
+$CONTAINER_WD = 980px
 $CONTAINER_MD = 800px
 $CONTAINER_SM = 560px
 
