--- a/src/apps/1688Web/webapp/stylus/index.styl
+++ b/src/apps/1688Web/webapp/stylus/index.styl
@@ -160,6 +160,9 @@ CacuRowSpace(space_num)
 .row-space-10
     CacuRowSpace(0.1rem)
 
+.mt-10
+    margin-top 0.1rem
+
 
 .mobile
     .row-space-common
@@ -200,6 +203,7 @@ for i in (1..10)
 
 @require 'section-title'
 @require 'box-form'
+@require '../../components/utils/index'
 @require '../../components/topbar/index'
 @require '../../components/slider/index'
 @require '../../components/index-news/index'
