--- a/src/apps/1688Web/components/company-list/estate-repair.pug
+++ b/src/apps/1688Web/components/company-list/estate-repair.pug
@@ -1,3 +1,5 @@
 .company-filter
     a.btn-company-filter(href="estate-clean.html") 保洁申请
     .btn-company-filter.sel 一键报修
+    a.btn-company-filter(href="estate-delivery.html") 配送申请
+    a.btn-company-filter(href="estate-deco.html") 装修申请
