--- a/src/apps/1688Web/components/m-staff/estate-clean.pug
+++ b/src/apps/1688Web/components/m-staff/estate-clean.pug
@@ -1,3 +1,5 @@
 .content-switch
     .btn-content-switch.sel 保洁申请
     a.btn-content-switch(href="m-estate-repair.html") 一键报修
+    a.btn-content-switch(href="m-estate-delivery.html") 配送申请
+    a.btn-content-switch(href="m-estate-deco.html") 装修申请
